Revision 42  : Fixed PDF plugin for images by  abhishekdelta  on  2010-06-21 20:03:2
----------------------------------------------------------------------------------------------
Revision 41  : Bugfixes, Site keywords and desc inputs added by  abhishekdelta  on  2010-06-20 02:47:3
----------------------------------------------------------------------------------------------
Revision 40  : Gallery module updated and enhanced by  abhishekdelta  on  2010-06-16 22:40:2
----------------------------------------------------------------------------------------------
Revision 39  : Finally added sphider search engine in Pragyan by  abhishekdelta  on  2010-06-16 00:47:5
----------------------------------------------------------------------------------------------
Revision 38  : Added Sphider search engine phase-I by  abhishekdelta  on  2010-06-16 00:17:2
----------------------------------------------------------------------------------------------
Revision 37  : Bugfixes in Gallery, Article and Uploads by  abhishekdelta  on  2010-06-14 13:14:4
----------------------------------------------------------------------------------------------
Revision 36  : Fixed Form Module and added Smart Tables in form users by  abhishekdelta  on  2010-06-13 05:33:4
----------------------------------------------------------------------------------------------
Revision 35  : Fixed the gallery module by  abhishekdelta  on  2010-06-12 16:57:5
----------------------------------------------------------------------------------------------
Revision 34  : Added smart tables in user management by  abhishekdelta  on  2010-06-12 06:56:2
----------------------------------------------------------------------------------------------
Revision 33  : Added comments feature for articles by  abhishekdelta  on  2010-06-12 02:07:3
----------------------------------------------------------------------------------------------